# mwahaha-vote-webapp

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.testing.yml  docker-compose.yml  pyproject.toml  schema.sql  uwsgi.ini
db/: Dockerfile  schema.sql
extraction/: argparse_with_defaults.py  ingest_prompts.py  ingest_submission.py  persist.py  util.py
ingestion/: codabench.py  submission.py
mwahahavote/: __main__.py  database.py  main.py
mwahahavote/static/: index.html
mwahahavote/static/css/: main.css
mwahahavote/static/js/: main.js
scripts/: ingest_all_submissions_from_codabench.py
web/: .gitignore  Dockerfile  Dockerfile.prod  load_test.sh  pyproject.toml  uwsgi.ini
web/ingestion/: codabench.py  submission.py
web/mwahahavote/: __main__.py  database.py
web/scripts/: compute_scores.sh  ingest_all_submissions_from_codabench.py  ingest_baseline.py  ingest_manual_submissions.py  ingest_prompts.py  ingest_submissions.py  postprocess_scores.py  prepare_data_for_scoring.py  print_submission_stats.py  scores_json_to_pretty_text_table.py
web/src/ingestion/: codabench.py  submission.py
web/src/mwahahavote/: __main__.py  database.py
web/src/mwahahavote/static/: index.html  leaderboard.html
web/src/mwahahavote/static/css/: main.css  votes.css
web/src/mwahahavote/static/img/: og.avif
web/src/mwahahavote/static/js/: main.js
