[project]
name = "mwahahavote"
version = "0.1.0.dev0"
description = "A web app to crowd-annotate for the MWAHAHA competition."
authors = [
    { name = "Santiago Castro", email = "sacastro@fing.edu.uy" },
]
requires-python = ">=3.12"
dependencies = [
    "flask<4",
    # We better pin the version to ensure the reproducibility of the scoring.
    # We don't use the latest stable version because it has some dependency issues.
    "fschat[webui] @ git+https://github.com/lm-sys/FastChat@587d5cf",
    "fsspec[http]<=2026",
    "huggingface-hub>=0.34.0,<1.0", # For `fschat`.
    "pandas<3",
    "requests<3",
    "sentry-sdk[flask]<3",
    "sqlalchemy[mysql]<3",
    "tqdm<5",
    "typing-extensions<5",
]

[project.urls]
homepage = "TODO"
repository = "https://github.com/pln-fing-udelar/mwahaha-vote-webapp"

[dependency-groups]
dev = [
    "ipython>=2,<10",
    "jq<2",
    "mycli<2",
    "pandas-stubs",
    "ruff>=0.3,<1",
    "ty<1",
    "types-requests",
    "types-tqdm",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
include = ["pyproject.toml", "mwahahavote/**/*.py"]
line-length = 120

[tool.ruff.lint]
ignore = ["N803", "N806", "N812"]  # Allow uppercase in variable names, arg names, and import aliases. E.g., `X`.
select = ["B", "C", "C90", "E", "F", "I", "N", "RUF", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]  # Allow: `from X import *`.

[tool.ty.src]
include = ["pyproject.toml", "mwahahavote/**/*.py"]

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.xml]
output = ".tox/test-reports/coverage.xml"

[tool.coverage.html]
directory = ".tox/test-reports/htmlcov"
