[project]
name = "mwahahavote"
version = "0.1.0.dev0"
description = "A web app to crowd-annotate for the MWAHAHA competition."
authors = [{ name = "Santiago Castro", email = "sacastro@fing.edu.uy" }]
requires-python = ">=3.14"
dependencies = [
    "cryptography", # Required for the database authentication when using `asyncmy`.
    "fastapi<1",
    # We better pin the version to ensure the reproducibility of the scoring.
    # We don't use the latest stable version because it has some dependency issues, and this fork has a bugfix.
    # We don't use the one from upstream because it obliges us to install `torch`.
    "fschat[webui] @ git+https://github.com/pln-fing-udelar/FastChat@431f847",
    "fsspec[http]<2027",
    "httptools", # Faster HTTP parser picked up by uvicorn.
    "huggingface-hub>=0.34.0,<2", # For `fschat`.
    "httpx>=0.27.0,<1",
    "jinja2<4",
    "pandas<4",
    "python-multipart<1", # For forms in FastAPI.
    "sentry-sdk<3",
    "sqlalchemy[asyncmy,mysql]<3",
    "starlette",
    "tqdm<5",
    "uvicorn<1",
    "uvloop", # Fast, drop-in replacement of the built-in asyncio event loop picked up by uvicorn.
]

[project.urls]
homepage = "https://thefunnier.com/"
repository = "https://github.com/pln-fing-udelar/mwahaha-vote-webapp"

[dependency-groups]
dev = [
    "ipython>=2,<10",
    "jq<2",
    "mycli<2",
    "pandas-stubs",
    "ruff>=0.3,<1",
    "ty<1",
    "types-tqdm",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
include = ["pyproject.toml", "scripts/**/*.py", "src/**/*.py"]
line-length = 120

[tool.ruff.lint]
select = ["B", "C", "C90", "E", "F", "I", "N", "RUF", "UP", "W"]

[tool.ty.src]
include = ["scripts/**/*.py", "src/**/*.py"]

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[tool.coverage.html]
directory = "test-reports/htmlcov"
